--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.3.2",
     "chart.js": "^4.2.1",
     "country-state-city": "^3.1.2",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
